<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fragmentMoment"
        android:title="@string/menu_moment"
        android:icon="@drawable/moment"/>
    <item
        android:id="@+id/fragmentChat"
        android:title="@string/menu_chat"
        android:icon="@drawable/chat"/>
    <item
        android:id="@+id/fragmentContact"
        android:title="@string/menu_contacts"
        android:icon="@drawable/contact"/>
    <item
        android:id="@+id/fragmentProfile"
        android:title="@string/menu_profile"
        android:icon="@drawable/profile"/>
    <item
        android:id="@+id/fragmentSetting"
        android:title="@string/menu_setting"
        android:icon="@drawable/setting"/>
</menu>