<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.login.RegisterActivity"
    android:background="@drawable/complementary_graphics">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:paddingBottom="@dimen/margin_large">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnRegisterBack"
            android:layout_width="@dimen/margin_xlarge"
            android:layout_height="@dimen/margin_xlarge"
            android:src="@drawable/baseline_arrow_back_blue_24dp"
            android:layout_marginTop="@dimen/margin_medium_2"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_below="@id/btnRegisterBack"
            android:id="@+id/tvHi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_otp_hi"
            android:textSize="@dimen/text_heading_2x"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/yorkie"
            android:layout_marginTop="@dimen/margin_xxlarge"
            android:layout_marginHorizontal="@dimen/margin_large"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_below="@id/tvHi"
            android:id="@+id/tvCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_otp_create"
            android:textSize="@dimen/text_regular"
            android:textColor="@color/colorSecondaryText"
            android:textAppearance="@style/notosans"
            android:layout_marginTop="@dimen/margin_card_medium"
            android:layout_marginHorizontal="@dimen/margin_large" />

        <com.google.android.material.card.MaterialCardView
            android:layout_below="@id/tvCreate"
            android:id="@+id/btnProfileImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/margin_60dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_xlarge">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivProfileImage"
                android:layout_width="@dimen/width_register_profile"
                android:layout_height="116dp"
                android:scaleType="centerCrop"
                android:src="@drawable/empty_profile" />

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_below="@id/btnProfileImage"
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_register_name"
            android:textSize="@dimen/text_regular"
            android:textColor="@color/colorHintText"
            android:textAppearance="@style/notosans"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginHorizontal="@dimen/margin_large"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_below="@id/tvName"
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_register_hint_name"
            android:textColorHint="@color/colorHintText"
            android:textSize="@dimen/text_regular_2x"
            android:textColor="@color/colorPrimaryText"
            android:textAppearance="@style/yorkie"
            android:inputType="text"
            android:layout_marginHorizontal="@dimen/margin_medium_3"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_below="@id/etName"
            android:id="@+id/tvDateOfBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_register_dob"
            android:textSize="@dimen/text_regular"
            android:textColor="@color/colorHintText"
            android:textAppearance="@style/notosans"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginHorizontal="@dimen/margin_large"/>

        <LinearLayout
            android:layout_below="@id/tvDateOfBirth"
            android:id="@+id/llSpinnersDateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_small"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinnerDay"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_36dp"
                android:elevation="@dimen/margin_medium"
                android:spinnerMode="dropdown"
                tools:ignore="TouchTargetSizeCheck" />

            <Spinner
                android:id="@+id/spinnerMonth"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_36dp"
                android:elevation="@dimen/margin_medium"
                android:spinnerMode="dropdown"
                tools:ignore="TouchTargetSizeCheck" />

            <Spinner
                android:id="@+id/spinnerYear"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_36dp"
                android:elevation="@dimen/margin_medium"
                android:spinnerMode="dropdown"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_below="@id/llSpinnersDateOfBirth"
            android:id="@+id/tvGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_register_gender"
            android:textSize="@dimen/text_regular"
            android:textColor="@color/colorHintText"
            android:textAppearance="@style/notosans"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginHorizontal="@dimen/margin_large"/>

        <RadioGroup
            android:layout_below="@id/tvGender"
            android:id="@+id/rgGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginHorizontal="@dimen/margin_medium_3">

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_medium_3"
                android:text="@string/lbl_register_rb_male"
                android:fontFamily="@font/yorkie_bold"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_regular"
                android:textStyle="bold"
                android:checked="true"
                android:buttonTint="@color/colorPrimary"/>

            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_medium_3"
                android:checked="false"
                android:text="@string/lbl_register_rb_female"
                android:fontFamily="@font/yorkie_bold"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_regular"
                android:buttonTint="@color/colorPrimary"/>

            <RadioButton
                android:id="@+id/rbOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/lbl_register_rb_other"
                android:fontFamily="@font/yorkie_bold"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_regular"
                android:buttonTint="@color/colorPrimary"/>

        </RadioGroup>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_below="@id/rgGender"
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_register_hint_password"
            android:textColorHint="@color/colorHintText"
            android:textSize="@dimen/text_regular"
            android:textColor="@color/colorPrimaryText"
            android:textAppearance="@style/notosans"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/margin_medium_3"
            android:layout_marginHorizontal="@dimen/margin_medium_3"/>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_below="@id/etPassword"
            android:id="@+id/cbAgree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_register_cb_agree"
            android:textColor="@color/colorPrimaryText"
            android:textAppearance="@style/notosans"
            android:textSize="@dimen/text_small"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:layout_marginHorizontal="@dimen/margin_medium_3"
            android:buttonTint="@color/colorPrimary"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_below="@id/cbAgree"
            android:id="@+id/btnSignUp"
            android:layout_width="@dimen/width_login_btn"
            android:layout_height="@dimen/height_login_btn"
            android:src="@drawable/button_sign"
            android:layout_marginTop="@dimen/margin_xxlarge"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</ScrollView>